# exp

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
exp1/: test.py
exp1/p1/: data.py  p1_main.py  result.csv  viz.py
exp1/p2/: p2_main.py  result.csv  result2.csv
exp1/p4/: ex_data.csv  inverse_iteration2.py  result_inv.csv  viz.py
exp1/p5/: data.csv  data2.csv  p5_data.txt  viz.py
exp1/source/: p2_LU_decompose.py  p4_exponetiation.py  p4_inver.py  qr_method.py
exp2/: p1.py  p11.py  p2.py  p5.py  p8.py  readme.md  test.py
exp2/data/: mmse_kadai1.xls  mmse_kadai2.xls  mmse_kadai5.xls  mmse_kadai6.xls  mmse_kadai7.xls  mmse_kadai8.xls
