[tool.poetry]
name = "dev-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
seaborn = "^0.13.2"
torch = "^2.5.0"
tqdm = "^4.66.5"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
xlrd = "^2.0.1"
pre-commit = "^4.0.1"
autopep8 = "^2.3.1"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
